# COREutils

./: .fuse_hidden00002a5500000007  .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE.txt  README.md  devel.py  input.json  inputW.json  requirements.txt  setup.cfg  setup.py  utils.py
FRENETICutils/: FreneticInpGen.py
NEdata/group_structures/: 1G.txt  2G.txt  CASMO-12.txt  CASMO-14.txt  CASMO-16.txt  CASMO-18.txt  CASMO-2.txt  CASMO-23.txt  CASMO-25.txt  CASMO-3.txt  CASMO-4.txt  CASMO-40.txt  CASMO-7.txt  CASMO-70.txt  CASMO-8.txt  CASMO-9.txt  ECCO-33.txt  ENEA-79.txt  ENEA-80.txt  PoliTO-LFR-120A.txt  PoliTO-LFR-12A.txt  PoliTO-LFR-3A.txt  PoliTO-LFR-6A.txt  PoliTO-LFR-6G.txt  PoliTO-LFR-80A.txt  PoliTO-LFR-9A.txt  PoliTO-SFR-6A.txt  PoliTO-SFR-6B.txt
PHdata/group_structures/: PoliTO-SFR-6B.txt
TEST.egg-info/: PKG-INFO  SOURCES.txt
core/: Assembly.py  Core.py  Map.py  MaterialData.py  UnfoldCore.py  __init__.py  plot.py
coremap/: .fuse_hidden000b784d00017a8e  AssemblyGeometry.py  CoreMap.py  UnfoldCore.py  __init__.py  alfred_1_6.txt
coremap/tutorial/: hexagonal_geometry.ipynb
coreutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
coreutils/core/: Assembly.py  Core.py  Geometry.py  Map.py  MaterialData.py  NE.py  TH.py  UnfoldCore.py  __init__.py
coreutils/freefem/: InpGen.py  InpNE.py  __init__.py  (+2 more)
docs/: conf.py  core.rst  index.rst  requirements.txt  tools.rst
freefem/: ffplot.py  utils.py
frenetic/: FreneticInpGen.py  InpGen.py  InpNE.py  InpTH.py  ParseFrenOut.py  __init__.py  devel.py  postprocess.py
tools/: plot.py  utils.py
(+141 files in other folders)
