[metadata]
name = coreutils
version = 0.1.0
long_description = file: README.md
maintainer=Nicolo` Abrate
maintainer_email=nicolo.abrate@polito.it
keywords=reactor physics, fission core, nuclear engineering
license=MIT
classifiers =
    Development Status :: 0 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data=True
install_requires =
    numpy>=1.16.0
    matplotlib>=2.2.3
packages = find:
python_requires = >=3.5, <3.9


[coverage:run]
branch = true
source = coreutils

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*.py
